<resources>
    <string name="app_name">Krishi Sanjeevini</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">krishisanjeevini1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_language">Choose Langauge</string>
    <string name="menu_call_helpline">Call Helpline</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="location">Location</string>
    <string name="updateat">Updated at</string>
    <string name="clearsky">Clear Sky</string>
    <string name="tempreture">24oC</string>
    <string name="mintemp">Min temp</string>
    <string name="address">Location</string>
    <string name="title_activity_crop_plot_registration">CropPlotRegistration</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="farmr_name">Farmer Name</string>
    <string name="title_activity_login">Login</string>
    <string name="name">Username</string>
    <string name="email">email</string>
    <string name="passWord">Pin</string>
    <string name="passWorddigits">Enter 6 digit pin</string>
    <string name="confirm_passWord">Confirm Pin</string>
    <string name="btRegister">regiter</string>
    <string name="btn_link_to_login">Login</string>
    <string name="label_signup">Sign Up </string>
    <string name="phoneno">Mobile No</string>
    <string name="farm_id">Plot ID:</string>
    <string name="farmer_name">Farmers Name:</string>
    <string name="farmer_last_name">Farmers Last Name:</string>
    <string name="farmer_address">Farmers Address:</string>
    <string name="farmer_taluqa">Farmers Taluqa:</string>
    <string name="farmers_district">Farmers District:</string>
    <string name="farmers_state">Farmers State:</string>
    <string name="crop_name">Crop Name:</string>
    <string name="crop_variety">Crop Variety:</string>
    <string name="crop_season">Crop Season:</string>
    <string name="choose_date">Choose Date:</string>
    <string name="water_source">Water Source:</string>
    <string name="soil_type">Soil Type:</string>
    <string name="intention">Intention:</string>
    <string name="crop_distance">Crop Distance:</string>
    <string name="distanceTo">X</string>
    <string name="age_of_plant">Age of the plant:</string>
    <string name="total_area">Total Area(Acres):</string>
    <string name="payment_status">Payment Status:</string>
    <string name="pruning_date">Pruning Date:</string>
    <string name="select_district">Select District:</string>
    <string name="select_taluqa">Select Taluqa:</string>
    <string name="village_name">Name of your Village:</string>
    <string name="full_address">Your full address:</string>
    <string name="payment_label">Do you want to make the payment now? then click below button:</string>
    <string name="make_payment">Make Payment</string>
    <string name="trail_label">If you wish to take a 10 days trial then press submit button:</string>
    <string name="submit">Submit</string>
    <string name="user_phone_no">Phone No of the farmer</string>
    <string name="refered_phone_no">Refereed Phone No</string>
    <string name="accept_policy">I Promise that I will be abide and agree by the app terms and conditions</string>
    <string name="enter_otp">Please Enter the O T P</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="present_crop_period">Present Crop Period</string>
    <string name="my_plot_schedule">My plot Today’s Schedule</string>
    <string name="weather_report">Weather Report</string>
    <string name="ask_question">Your Question our Answer</string>
    <string name="knowledge_bank">Knowledge Bank</string>
    <string name="webinar">Webinar</string>
    <string name="videos">Videos for You</string>
    <string name="agree_dealer">Agri Input Dealer</string>
    <string name="service_provider">Service Provider</string>
    <string name="my_diary">My Diary</string>
    <string name="my_plot_details">My plot Details</string>
    <string name="webinars">Webinars</string>
    <string name="service_providers">Service Providers</string>
    <string name="agree_input">Agree Input Dealers</string>
    <string name="select_plot_details">Select plot </string>
    <string name="register_another_plot">Register your Another Plot</string>
    <string name="network_info">Please check your network/internet connection</string>
    <string name="diary_title">Diary Title</string>
    <string name="diary_details">You can right diary details here</string>
    <string name="diary_unit">Unit</string>
    <string name="diary_phi">PHI</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="diary_diseage">Diseage Information</string>
    <string name="save_diary">Save</string>
    <string name="schedule_day">Schedule Day:</string>
    <string name="after_pronningdays">Before Pronning Days:</string>
    <string name="medicine_details">Medicine Brand:</string>
    <string name="active_ingredients">Active Ingredients:</string>
    <string name="disease_Infection">Disease Infection:</string>
    <string name="view_schedule">View Schedule</string>
    <string name="schedule">Schedule</string>
    <string name="no_schedule">Schedule is not available for this plot</string>
    <string name="no_questions">There is no any data availabel</string>
    <string name="record_voice">Record Voice</string>
    <string name="record_play">Play Voice</string>
    <string name="record_stop">Stop Recording</string>
    <string name="schedule_date">Schedule Date:</string>
    <string name="spray_medicine_brand">Spray Medicine Brand:</string>
    <string name="request_title">Question Title:</string>
    <string name="question_date">Requested Date:</string>
    <string name="question_assigned">Assigned To:</string>
    <string name="question_status">Request Status:</string>
    <string name="answer">Answer:</string>
    <string name="raise_request">Ask Question</string>
    <string name="view_questions_list">View Status</string>
    <string name="ques_title">You found any problem or diseage information for your farm you can click on Ask Question button to register problem</string>
    <string name="status_title">For tracking status of your question, please click on View Status button </string>
    <string name="notification">Notifications</string>
    <string name="select_state">Select Your State :</string>
    <string name="about_us_title">KRISHI SANJEEVINI is experienced team of agribusiness professionals engaged in grape advisory, plantation and cultivation. Over a period of time, KRISHI SANJEEVINI has developed expertise in cultivation and quality harvesting aspects of grape industry. KRISHI SANJEEVINI is serving grape community using strong technical knowledge and providing timely practical solutions with respect to cultivation as well as processing of resins of grapes. KRISHI SANJEEVINI dedicated working teem mainly focusing on cultivation practices, nutrition management, pest and disease management, quality and yield management and solutions to cultivation related issues. We have also developed and launched KRISHI SANJEEVINI Android agricultural Application exclusively for grape growers to provide timely advisory on cultivation aspects and real time problem solving. To serve the grape industry better, . We have started a dedicated YouTube channel, KRISHI SANJEEVINI Agri Services through which the farmers will be guided through the guidance video for the current issues and solutions.</string>
    <string name="call_label">Call :+917406861266 </string>
    <string name="call_label2">Call :+918951320059 </string>
    <string name="call_email">krishisanjeevini1@gmail.com</string>
    <string name="default_notification_channel_id">1001</string>
    <string name="spray_schedule">Spray Schedule:</string>
    <string name="spray_ingredients">Ingredients:</string>
    <string name="spray_purpose">Purpose:</string>
    <string name="basal_dose_note" >Basal Dose Note:</string>
    <string name="basal_dose_medicine">Basal Medicine Brand:</string>
    <string name="basal_ingredients">Basal Ingredients:</string>
    <string name="basal_purpose">Basal Purpose:</string>
    <string name="notes_data">Notes:</string>
    <string name="weather_activity">Weather Report</string>
    <string name="question_activity">Question and Answer</string>
    <string name="askquestion">Ask Question</string>
    <string name="register_your_plot">Register your Plot</string>
    <string name="username">Enter Name</string>
    <string name="read_accept">Yes I Have Read</string>
    <string name="privacy_title">Privacy Policy</string>
</resources>