<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.farms.farmguru.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!--<fragment
        android:id="@+id/nav_gallery"
        android:name="com.farms.farmguru.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.farms.farmguru.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
-->
    <fragment
        android:id="@+id/nav_language"
        android:name="com.farms.farmguru.ui.language.LanguageFragment"
        android:label="@string/menu_language"
        tools:layout="@layout/fragment_language" />

    <fragment
        android:id="@+id/nav_executive"
        android:name="com.farms.farmguru.ui.executive.ExecutiveFragment"
        android:label="@string/menu_call_helpline"
        tools:layout="@layout/fragment_executive" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.farms.farmguru.ui.aboutus.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.farms.farmguru.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>