<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.FarmGuru.AppBarOverlay"
        android:id="@+id/appbarlayout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.FarmGuru.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_below="@id/appbarlayout">

            <Button
                android:id="@+id/presentCropPeriod"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:minHeight="48dp"
                android:textSize="12dp"
                android:text="@string/present_crop_period"

                />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@id/presentCropPeriod">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/scheduellayout">

        <Button
            android:id="@+id/myPlotSchedule"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:textSize="12dp"
            android:text="@string/my_plot_schedule"
            />
        <Button
            android:id="@+id/weatherReport"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:textSize="12dp"
            android:text="@string/weather_report"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/helplinelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/scheduellayout">

        <Button
            android:id="@+id/askQuestionButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:textSize="12dp"
            android:text="@string/ask_question"
            />
        <Button
            android:id="@+id/knowledgeBankButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:textSize="12dp"
            android:text="@string/knowledge_bank"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/webinarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/helplinelayout">

        <Button
            android:id="@+id/webinarButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:textSize="12dp"
            android:text="@string/webinar"
            />
        <Button
            android:id="@+id/videosButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:textSize="12dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"

            android:text="@string/videos"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dealerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/webinarlayout">

        <Button
            android:id="@+id/agreeDealerButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:textSize="12dp"
            android:text="@string/agree_dealer"
            />
        <Button
            android:id="@+id/serviceProviderButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:textSize="12dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"

            android:text="@string/service_provider"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/diarylayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/dealerlayout">

        <Button
            android:id="@+id/myDiaryButton"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:textSize="12dp"
            android:text="@string/my_diary"
            />
        <Button
            android:id="@+id/myPlotDetailButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:minHeight="48dp"
            android:textSize="12dp"
            android:text="@string/my_plot_details"
            />
    </LinearLayout>

    <Button
        android:id="@+id/registerAnotherPlotButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:textSize="12dp"
        android:layout_below="@id/diarylayout"
        android:text="@string/register_another_plot"
        />
</RelativeLayout>
</RelativeLayout>
    </RelativeLayout>
</ScrollView>