<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".plotregistration.CropPlotRegistrationActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

       >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appstatusbarLayout"
            android:theme="@style/Theme.FarmGuru.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.FarmGuru.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>
        <ProgressBar
            android:foregroundGravity="center_horizontal|center"
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="?android:attr/progressBarStyle"
            android:layout_marginTop="?attr/actionBarSize"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_below="@id/appstatusbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/farmer_name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
               >

                <EditText
                    android:id="@+id/diaryTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/diary_title"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:autofillHints=""
                    android:inputType="text" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:background="@drawable/square_border">

                <EditText
                    android:id="@+id/diaryDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:hint="@string/diary_details"
                    tools:ignore="Autofill,SpeakableTextPresentCheck" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/square_border">

                <EditText
                    android:id="@+id/diaryUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/diary_unit"
                    android:background="@null"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:autofillHints="" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/square_border">

                <EditText
                    android:id="@+id/diaryDiseageInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/diary_diseage"
                    android:background="@null"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_border"
                android:layout_margin="16dp"
               >

                <EditText
                    android:id="@+id/diaryPhi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:hint="@string/diary_phi"
                    android:background="@null"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_margin="16dp"
                >

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@id/buttonOk"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/buttonOk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:text="@string/save_diary"
                    android:layout_weight="1"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
<!--</ScrollView>-->

</ScrollView>