<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ProgressBar
        android:foregroundGravity="center_horizontal|center"
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="50dp"
       android:layout_centerInParent="true"
        android:orientation="vertical">

    <!-- ENTER USERNAME -->
        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="text"
            android:minHeight="48dp" />

    <!-- ENTER PASSWORD -->
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/passWord"
            android:inputType="textPassword"
            android:minHeight="48dp" />


        <Button
            android:id="@+id/btnLinkToLogIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"/>

    </LinearLayout>


</RelativeLayout>