<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/list_color"
    tools:context=".login.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.FarmGuru.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.FarmGuru.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <ProgressBar
        android:foregroundGravity="center_horizontal|center"
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="?attr/actionBarSize"
        android:visibility="gone"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginTop="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <!-- ENTER USERNAME -->
        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:text=""
            android:inputType="text"
            android:minHeight="48dp" />

        <!-- ENTER PASSWORD -->
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/passWord"
            android:text=""
            android:inputType="textPassword"
            android:minHeight="48dp" />


        <Button
            android:id="@+id/btnLinkToLogIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

    <!--<include layout="@layout/content_login" />-->


</androidx.coordinatorlayout.widget.CoordinatorLayout>